<resources>
    <string name="app_name">Login Form</string>

    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_acc">Don\'t have account ?</string>
    <string name="new_account">New Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age :</string>
    <string name="welcome">Welcome</string>
    <string name="account_info">Account Info</string>
    <string name="welcome_back" translatable="false">Welcome Back!</string>
</resources>